// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Color/PalettePicker clearable 1`] = `
<div
  style={
    Object {
      "width": "350px",
    }
  }
>
  <div
    className="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="euiPopover__anchor"
    >
      <input
        type="hidden"
        value="clear"
      />
      <div
        className="euiFormControlLayout euiFormControlLayout--compressed"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <span
            className="euiScreenReaderOnly"
            id="generated-id"
          >
            Select an option: None, is selected
          </span>
          <button
            aria-haspopup="true"
            aria-labelledby="undefined generated-id"
            className="euiSuperSelectControl euiSuperSelectControl--compressed"
            onClick={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            type="button"
          >
            None
          </button>
          <div
            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              className="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                className="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Color/PalettePicker default 1`] = `
<div
  style={
    Object {
      "width": "350px",
    }
  }
>
  <div
    className="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="euiPopover__anchor"
    >
      <input
        type="hidden"
        value="paul_tor_14"
      />
      <div
        className="euiFormControlLayout euiFormControlLayout--compressed"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <span
            className="euiScreenReaderOnly"
            id="generated-id"
          >
            Select an option: 
            <span
              className="euiColorPaletteDisplay euiColorPaletteDisplay--sizeSmall"
            >
              <span
                className="euiColorPaletteDisplayFixed__bleedArea"
              >
                <span
                  style={
                    Object {
                      "backgroundColor": "#882E72",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#B178A6",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#D6C1DE",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#1965B0",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#5289C7",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#7BAFDE",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#4EB265",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#90C987",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#CAE0AB",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F7EE55",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F6C141",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F1932D",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#E8601C",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#DC050C",
                      "width": "7.142857142857143%",
                    }
                  }
                />
              </span>
            </span>
            , is selected
          </span>
          <button
            aria-haspopup="true"
            aria-labelledby="undefined generated-id"
            className="euiSuperSelectControl euiSuperSelectControl--compressed"
            onClick={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            type="button"
          >
            <span
              className="euiColorPaletteDisplay euiColorPaletteDisplay--sizeSmall"
            >
              <span
                className="euiColorPaletteDisplayFixed__bleedArea"
              >
                <span
                  style={
                    Object {
                      "backgroundColor": "#882E72",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#B178A6",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#D6C1DE",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#1965B0",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#5289C7",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#7BAFDE",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#4EB265",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#90C987",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#CAE0AB",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F7EE55",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F6C141",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F1932D",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#E8601C",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#DC050C",
                      "width": "7.142857142857143%",
                    }
                  }
                />
              </span>
            </span>
          </button>
          <div
            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              className="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                className="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Color/PalettePicker interactive 1`] = `
<div
  style={
    Object {
      "width": "350px",
    }
  }
>
  <div
    className="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock euiSuperSelect"
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="euiPopover__anchor"
    >
      <input
        type="hidden"
        value="paul_tor_14"
      />
      <div
        className="euiFormControlLayout euiFormControlLayout--compressed"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <span
            className="euiScreenReaderOnly"
            id="generated-id"
          >
            Select an option: 
            <span
              className="euiColorPaletteDisplay euiColorPaletteDisplay--sizeSmall"
            >
              <span
                className="euiColorPaletteDisplayFixed__bleedArea"
              >
                <span
                  style={
                    Object {
                      "backgroundColor": "#882E72",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#B178A6",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#D6C1DE",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#1965B0",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#5289C7",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#7BAFDE",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#4EB265",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#90C987",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#CAE0AB",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F7EE55",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F6C141",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F1932D",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#E8601C",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#DC050C",
                      "width": "7.142857142857143%",
                    }
                  }
                />
              </span>
            </span>
            , is selected
          </span>
          <button
            aria-haspopup="true"
            aria-labelledby="undefined generated-id"
            className="euiSuperSelectControl euiSuperSelectControl--compressed"
            onClick={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            type="button"
          >
            <span
              className="euiColorPaletteDisplay euiColorPaletteDisplay--sizeSmall"
            >
              <span
                className="euiColorPaletteDisplayFixed__bleedArea"
              >
                <span
                  style={
                    Object {
                      "backgroundColor": "#882E72",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#B178A6",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#D6C1DE",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#1965B0",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#5289C7",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#7BAFDE",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#4EB265",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#90C987",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#CAE0AB",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F7EE55",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F6C141",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#F1932D",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#E8601C",
                      "width": "7.142857142857143%",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "backgroundColor": "#DC050C",
                      "width": "7.142857142857143%",
                    }
                  }
                />
              </span>
            </span>
          </button>
          <div
            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              className="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                className="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
